--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,5 @@ chrono = "0.4.26"
 anyhow = "1.0.71"
 reqwest = { version = "0.11.18", features = ["json", "blocking"] }
 serde_json = "1.0.99"
+derive-getters = "0.3.0"
+tera = "1.19.0"
