--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,3 +14,4 @@ reqwest = { version = "0.11.18", features = ["json", "blocking"] }
 serde_json = "1.0.99"
 derive-getters = "0.3.0"
 tera = "1.19.0"
+derive_builder = "0.12.0"
